Fixed page jumping to top for modal component #310

--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -77,17 +77,11 @@
 .uk-modal.uk-open { opacity: 1; }
 
 /*
- * 7. Prevents scrolling for the body content
- * 8. Prevents duplicated scrollbar caused by 4.
+ * Prevents duplicated scrollbar caused by 4.
  */
 
 .uk-modal-page,
-.uk-modal-page body {
-    /* 7 */
-    height: 100%;
-    /* 8 */
-    overflow: hidden;
-}
+.uk-modal-page body { overflow: hidden; }
 
 
 /* Sub-object: `uk-modal-dialog`
